--- a/src/pages/Feedback/Feedback.module.sass
+++ b/src/pages/Feedback/Feedback.module.sass
@@ -55,8 +55,11 @@
         font-size: 24px
         line-height: 30px
         color: #0C0C0C
-        padding: 12px 90px
+        width: 243px
+        height: 55px
         border: none
         cursor: pointer
+        &:disabled
+          opacity: 0.4
         &:hover
           opacity: 0.9
